add draggable table

--- a/DraggableTable/index.html
+++ b/DraggableTable/index.html
@@ -7,9 +7,10 @@
                     new TableDraggable(table,document)
                 })
             </script>
+            <link rel="stylesheet" href="./index.css" type="text/css" />
     </head>
     <body>
-        <table>
+        <table border="1">
             <tr>
                 <th>时间</th>
                 <th>币对</th>
