--- a/MyVue/test.html
+++ b/MyVue/test.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div v-for='item in items'>
-            <span class='spancls'>b</span>
+            <div><span class='spancls'>{{item+1}}</span></div>
         </div>
     </body>
 </html>
